# wordparserpylib

./: README.md  pyproject.toml
wordparser/: __init__.py  reader.py  utils.py
wordparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
